--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/lan-mak/ahj-7-1-http-server#readme",
   "dependencies": {
     "forever": "^4.0.3",
-    "koa": "^2.14.1"
+    "koa": "^2.14.1",
+    "koa-body": "^6.0.1"
   }
 }
